--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,200&display=swap');
+
+
 :root{
     /** primary color */
     --color-p : #37d610;
@@ -24,7 +27,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-fam1);
-    /* outline: 1px solid red; */
+    /* outline: 1px solid black; */
     scroll-behavior: smooth;
     
 }
@@ -80,20 +83,23 @@ header{
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
+      border: 2px solid red;
+      justify-content: center;
+    align-content: center;
 }
 .photo3d{
-    background: url("../img/3d.png");
+    background: url(../img/3d.png);
     /* width: 50%; */
-    height: 100vh;
-    background-size:contain;
+    height: 50vw;
+    background-size: contain;
     background-repeat: no-repeat;
     transform: scale(var(--3d-size));
-    max-width: 50vw;
+    
     animation: rotate3d 20s linear infinite;
     animation-delay: 0.5s;
-    position: relative;
-    right: 0;
-    /* border: 2px solid red; */
+   
+   
+    border: 2px solid red;
  
 
 }
@@ -105,7 +111,7 @@ header{
     background-size:contain ;
     background-repeat: no-repeat;
     transform: scale(1);
-    animation: rotate3d 20s linear infinite;
+    /* animation: rotate3d 20s linear infinite; */
     animation-delay: 2.5s;
 }
 @keyframes rotate3d {
